--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=${MYSQL_URL}
+spring.datasource.url=jdbc:mysql://monorail.proxy.rlwy.net:20831/?user=root
 spring.datasource.username=${MYSQLUSER}
 spring.datasource.password=${MYSQLPASSWORD}
 spring.datasource.driverClassName=com.mysql.cj.jdbc.Driver
